update nav bar and connect gumroad digital products

--- a/index.html
+++ b/index.html
@@ -38,11 +38,19 @@
             Creator Tools Directory
           </a>
         </li>
+        <li>
+          <a href="https://plumbmonkey.gumroad.com/"
+   target="_blank"
+   rel="noopener"
+   class="block px-2 text-teal-400 hover:text-teal-300 underline font-semibold"
+>
+  Royalty-Free MIDI Groove Packs
+</a>
+        </li>
       </ul>
     </nav>
   </div>
 </header>
-
 
 <!-- Hero Section -->
 <section class="relative h-screen w-full overflow-hidden pt-10" id="hero">
@@ -90,7 +98,6 @@
     </svg>
   </button>
 </section>
-
 
 <!-- Services Section -->
 <section id="services" class="bg-cover-section py-24">
@@ -156,7 +163,7 @@
           allowfullscreen
         ></iframe>
         <h3 class="mt-2 text-xl font-semibold">Moon Whisper — Contest Entry</h3>
-        <p class="text-sm">music, animation, and edit all by Plumbmonkey. Handcrafted visuals and sound.</p>
+        <p class="text-sm">Music, animation, and edit all by Plumbmonkey. Handcrafted visuals and sound.</p>
       </div>
       <div class="group">
         <iframe
@@ -169,6 +176,16 @@
         <h3 class="mt-2 text-xl font-semibold">Dream Tunnel 3 — Animated Video</h3>
         <p class="text-sm">Full-length surreal journey. Composed, animated, and edited by Plumbmonkey. 100% original content.</p>
       </div>
+    </div>
+    <!-- Digital Products Button -->
+    <div class="mt-12 text-center">
+      <a href="https://plumbmonkey.gumroad.com/"
+         target="_blank"
+         rel="noopener"
+         class="inline-block px-6 py-3 rounded bg-orange-300 text-zinc-900 font-bold shadow hover:bg-orange-200 transition"
+      >
+        Visit My Digital Shop (Sample Packs & More)
+      </a>
     </div>
   </div>
 </section>
@@ -231,3 +248,4 @@
 <script src="assets/hero.js"></script>
 </body>
 </html>
+
