Refine portfolio section with accurate project descriptions

--- a/index.html
+++ b/index.html
@@ -140,41 +140,50 @@
   <div class="container mx-auto px-6">
     <h2 class="text-3xl font-semibold mb-10">Video Editing Portfolio</h2>
     <p class="max-w-2xl mx-auto mb-8 text-center text-lg">
-      Original music videos, storytelling edits, and custom animation—every cut by Plumbmonkey. Ready to bring this level of polish to your project?
+      Music, motion, and story—every edit powered by Plumbmonkey’s own animation and original music.
     </p>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+      <!-- Composite 2D/3D & Live Shot -->
       <div class="group">
         <iframe
           class="w-full aspect-video rounded group-hover:opacity-80 transition"
-          src="https://youtu.be/nD11ez4QATo"
-          title="Composite 2D/3D & live shot — Plumbmonkey"
+          src="https://www.youtube.com/embed/nD11ez4QATo"
+          title="Composite 2D/3D & Live Footage — Plumbmonkey"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
-        <h3 class="mt-2 text-xl font-semibold">Manifestation — Music Video</h3>
-        <p class="text-sm">Animated, directed, and performed by Plumbmonkey. Concept to final mix—full creative control.</p>
+        <h3 class="mt-2 text-xl font-semibold">Composite 2D/3D & Live Footage</h3>
+        <p class="text-sm">
+          Handcrafted blend of 2D/3D animation and live footage. Original soundtrack, animation, and edit by Plumbmonkey.
+        </p>
       </div>
+      <!-- Coffee House Commercial -->
       <div class="group">
         <iframe
           class="w-full aspect-video rounded group-hover:opacity-80 transition"
-          src="https://youtu.be/1rH8Hf8PI64"
+          src="https://www.youtube.com/embed/1rH8Hf8PI64"
           title="Coffee House Commercial — Plumbmonkey"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
-        <h3 class="mt-2 text-xl font-semibold">Moon Whisper — Contest Entry</h3>
-        <p class="text-sm">Music, animation, and edit all by Plumbmonkey. Handcrafted visuals and sound.</p>
+        <h3 class="mt-2 text-xl font-semibold">Coffee House Commercial</h3>
+        <p class="text-sm">
+          High-energy short crafted from stock footage, with original music and sound design. Proof that even pre-shot assets can tell a unique story.
+        </p>
       </div>
+      <!-- Memorable Moments: Channel Chronology -->
       <div class="group">
         <iframe
           class="w-full aspect-video rounded group-hover:opacity-80 transition"
-          src="https://youtu.be/dSxHTq5AFMI"
+          src="https://www.youtube.com/embed/dSxHTq5AFMI"
           title="Memorable Moments — Plumbmonkey"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
-        <h3 class="mt-2 text-xl font-semibold">Dream Tunnel 3 — Animated Video</h3>
-        <p class="text-sm">Full-length surreal journey. Composed, animated, and edited by Plumbmonkey. 100% original content.</p>
+        <h3 class="mt-2 text-xl font-semibold">Memorable Moments — Channel Chronology</h3>
+        <p class="text-sm">
+          A journey through the Plumbmonkey YouTube channel. Timeline edit, custom transitions, and a wholly original soundtrack.
+        </p>
       </div>
     </div>
     <!-- Digital Products Button -->
@@ -189,6 +198,7 @@
     </div>
   </div>
 </section>
+
 
 <!-- Contact Section -->
 <section id="contact" class="contact-section py-24">
